# pkg/proto/message_api/v1/message_api.pb.go
@@ -2,7 +2,7 @@
 
 // Code generated by protoc-gen-go. DO NOT EDIT.
 // versions:
-// 	protoc-gen-go v1.35.1
+// 	protoc-gen-go v1.36.1
 // 	protoc        (unknown)
 // source: message_api/v1/message_api.proto
 
@@ -78,12 +78,11 @@ func (SortDirection) EnumDescriptor() ([]byte, []int) {
 // receiverTime and pubsubTopic removed for simplicity.
 // Both removed fields are optional
 type IndexCursor struct {
-	state         protoimpl.MessageState
-	sizeCache     protoimpl.SizeCache
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Digest        []byte                 `protobuf:"bytes,1,opt,name=digest,proto3" json:"digest,omitempty"`
+	SenderTimeNs  uint64                 `protobuf:"varint,2,opt,name=sender_time_ns,json=senderTimeNs,proto3" json:"sender_time_ns,omitempty"`
 	unknownFields protoimpl.UnknownFields
-
-	Digest       []byte `protobuf:"bytes,1,opt,name=digest,proto3" json:"digest,omitempty"`
-	SenderTimeNs uint64 `protobuf:"varint,2,opt,name=sender_time_ns,json=senderTimeNs,proto3" json:"sender_time_ns,omitempty"`
+	sizeCache     protoimpl.SizeCache
 }
 
 func (x *IndexCursor) Reset() {
@@ -132,18 +131,17 @@ func (x *IndexCursor) GetSenderTimeNs() uint64 {
 
 // Wrapper for potentially multiple types of cursor
 type Cursor struct {
-	state         protoimpl.MessageState
-	sizeCache     protoimpl.SizeCache
-	unknownFields protoimpl.UnknownFields
-
+	state protoimpl.MessageState `protogen:"open.v1"`
 	// Making the cursor a one-of type, as I would like to change the way we
 	// handle pagination to use a precomputed sort field.
 	// This way we can handle both methods
 	//
-	// Types that are assignable to Cursor:
+	// Types that are valid to be assigned to Cursor:
 	//
 	//	*Cursor_Index
-	Cursor isCursor_Cursor `protobuf_oneof:"cursor"`
+	Cursor        isCursor_Cursor `protobuf_oneof:"cursor"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
 }
 
 func (x *Cursor) Reset() {
@@ -176,16 +174,18 @@ func (*Cursor) Descriptor() ([]byte, []int) {
 	return file_message_api_v1_message_api_proto_rawDescGZIP(), []int{1}
 }
 
-func (m *Cursor) GetCursor() isCursor_Cursor {
-	if m != nil {
-		return m.Cursor
+func (x *Cursor) GetCursor() isCursor_Cursor {
+	if x != nil {
+		return x.Cursor
 	}
 	return nil
 }
 
 func (x *Cursor) GetIndex() *IndexCursor {
-	if x, ok := x.GetCursor().(*Cursor_Index); ok {
-		return x.Index
+	if x != nil {
+		if x, ok := x.Cursor.(*Cursor_Index); ok {
+			return x.Index
+		}
 	}
 	return nil
 }
@@ -203,14 +203,13 @@ func (*Cursor_Index) isCursor_Cursor() {}
 // This is based off of the go-waku PagingInfo struct, but with the direction
 // changed to our SortDirection enum format
 type PagingInfo struct {
-	state         protoimpl.MessageState
-	sizeCache     protoimpl.SizeCache
-	unknownFields protoimpl.UnknownFields
-
+	state protoimpl.MessageState `protogen:"open.v1"`
 	// Note: this is a uint32, while go-waku's pageSize is a uint64
-	Limit     uint32        `protobuf:"varint,1,opt,name=limit,proto3" json:"limit,omitempty"`
-	Cursor    *Cursor       `protobuf:"bytes,2,opt,name=cursor,proto3" json:"cursor,omitempty"`
-	Direction SortDirection `protobuf:"varint,3,opt,name=direction,proto3,enum=xmtp.message_api.v1.SortDirection" json:"direction,omitempty"`
+	Limit         uint32        `protobuf:"varint,1,opt,name=limit,proto3" json:"limit,omitempty"`
+	Cursor        *Cursor       `protobuf:"bytes,2,opt,name=cursor,proto3" json:"cursor,omitempty"`
+	Direction     SortDirection `protobuf:"varint,3,opt,name=direction,proto3,enum=xmtp.message_api.v1.SortDirection" json:"direction,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
 }
 
 func (x *PagingInfo) Reset() {
@@ -266,10 +265,7 @@ func (x *PagingInfo) GetDirection() SortDirection {
 
 // Envelope encapsulates a message while in transit.
 type Envelope struct {
-	state         protoimpl.MessageState
-	sizeCache     protoimpl.SizeCache
-	unknownFields protoimpl.UnknownFields
-
+	state protoimpl.MessageState `protogen:"open.v1"`
 	// The topic the message belongs to,
 	// If the message includes the topic as well
 	// it MUST be the same as the topic in the envelope.
@@ -277,8 +273,10 @@ type Envelope struct {
 	// Message creation timestamp
 	// If the message includes the timestamp as well
 	// it MUST be equivalent to the timestamp in the envelope.
-	TimestampNs uint64 `protobuf:"varint,2,opt,name=timestamp_ns,json=timestampNs,proto3" json:"timestamp_ns,omitempty"`
-	Message     []byte `protobuf:"bytes,3,opt,name=message,proto3" json:"message,omitempty"`
+	TimestampNs   uint64 `protobuf:"varint,2,opt,name=timestamp_ns,json=timestampNs,proto3" json:"timestamp_ns,omitempty"`
+	Message       []byte `protobuf:"bytes,3,opt,name=message,proto3" json:"message,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
 }
 
 func (x *Envelope) Reset() {
@@ -334,11 +332,10 @@ func (x *Envelope) GetMessage() []byte {
 
 // Publish
 type PublishRequest struct {
-	state         protoimpl.MessageState
-	sizeCache     protoimpl.SizeCache
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Envelopes     []*Envelope            `protobuf:"bytes,1,rep,name=envelopes,proto3" json:"envelopes,omitempty"`
 	unknownFields protoimpl.UnknownFields
-
-	Envelopes []*Envelope `protobuf:"bytes,1,rep,name=envelopes,proto3" json:"envelopes,omitempty"`
+	sizeCache     protoimpl.SizeCache
 }
 
 func (x *PublishRequest) Reset() {
@@ -380,9 +377,9 @@ func (x *PublishRequest) GetEnvelopes() []*Envelope {
 
 // Empty message as a response for Publish
 type PublishResponse struct {
-	state         protoimpl.MessageState
-	sizeCache     protoimpl.SizeCache
+	state         protoimpl.MessageState `protogen:"open.v1"`
 	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
 }
 
 func (x *PublishResponse) Reset() {
@@ -417,11 +414,10 @@ func (*PublishResponse) Descriptor() ([]byte, []int) {
 
 // Subscribe
 type SubscribeRequest struct {
-	state         protoimpl.MessageState
-	sizeCache     protoimpl.SizeCache
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	ContentTopics []string               `protobuf:"bytes,1,rep,name=content_topics,json=contentTopics,proto3" json:"content_topics,omitempty"`
 	unknownFields protoimpl.UnknownFields
-
-	ContentTopics []string `protobuf:"bytes,1,rep,name=content_topics,json=contentTopics,proto3" json:"content_topics,omitempty"`
+	sizeCache     protoimpl.SizeCache
 }
 
 func (x *SubscribeRequest) Reset() {
@@ -463,9 +459,9 @@ func (x *SubscribeRequest) GetContentTopics() []string {
 
 // SubscribeAll
 type SubscribeAllRequest struct {
-	state         protoimpl.MessageState
-	sizeCache     protoimpl.SizeCache
+	state         protoimpl.MessageState `protogen:"open.v1"`
 	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
 }
 
 func (x *SubscribeAllRequest) Reset() {
@@ -500,14 +496,13 @@ func (*SubscribeAllRequest) Descriptor() ([]byte, []int) {
 
 // Query
 type QueryRequest struct {
-	state         protoimpl.MessageState
-	sizeCache     protoimpl.SizeCache
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	ContentTopics []string               `protobuf:"bytes,1,rep,name=content_topics,json=contentTopics,proto3" json:"content_topics,omitempty"`
+	StartTimeNs   uint64                 `protobuf:"varint,2,opt,name=start_time_ns,json=startTimeNs,proto3" json:"start_time_ns,omitempty"`
+	EndTimeNs     uint64                 `protobuf:"varint,3,opt,name=end_time_ns,json=endTimeNs,proto3" json:"end_time_ns,omitempty"`
+	PagingInfo    *PagingInfo            `protobuf:"bytes,4,opt,name=paging_info,json=pagingInfo,proto3" json:"paging_info,omitempty"`
 	unknownFields protoimpl.UnknownFields
-
-	ContentTopics []string    `protobuf:"bytes,1,rep,name=content_topics,json=contentTopics,proto3" json:"content_topics,omitempty"`
-	StartTimeNs   uint64      `protobuf:"varint,2,opt,name=start_time_ns,json=startTimeNs,proto3" json:"start_time_ns,omitempty"`
-	EndTimeNs     uint64      `protobuf:"varint,3,opt,name=end_time_ns,json=endTimeNs,proto3" json:"end_time_ns,omitempty"`
-	PagingInfo    *PagingInfo `protobuf:"bytes,4,opt,name=paging_info,json=pagingInfo,proto3" json:"paging_info,omitempty"`
+	sizeCache     protoimpl.SizeCache
 }
 
 func (x *QueryRequest) Reset() {
@@ -570,12 +565,11 @@ func (x *QueryRequest) GetPagingInfo() *PagingInfo {
 
 // The response, containing envelopes, for a query
 type QueryResponse struct {
-	state         protoimpl.MessageState
-	sizeCache     protoimpl.SizeCache
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Envelopes     []*Envelope            `protobuf:"bytes,1,rep,name=envelopes,proto3" json:"envelopes,omitempty"`
+	PagingInfo    *PagingInfo            `protobuf:"bytes,2,opt,name=paging_info,json=pagingInfo,proto3" json:"paging_info,omitempty"`
 	unknownFields protoimpl.UnknownFields
-
-	Envelopes  []*Envelope `protobuf:"bytes,1,rep,name=envelopes,proto3" json:"envelopes,omitempty"`
-	PagingInfo *PagingInfo `protobuf:"bytes,2,opt,name=paging_info,json=pagingInfo,proto3" json:"paging_info,omitempty"`
+	sizeCache     protoimpl.SizeCache
 }
 
 func (x *QueryResponse) Reset() {
@@ -624,11 +618,10 @@ func (x *QueryResponse) GetPagingInfo() *PagingInfo {
 
 // BatchQuery
 type BatchQueryRequest struct {
-	state         protoimpl.MessageState
-	sizeCache     protoimpl.SizeCache
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Requests      []*QueryRequest        `protobuf:"bytes,1,rep,name=requests,proto3" json:"requests,omitempty"`
 	unknownFields protoimpl.UnknownFields
-
-	Requests []*QueryRequest `protobuf:"bytes,1,rep,name=requests,proto3" json:"requests,omitempty"`
+	sizeCache     protoimpl.SizeCache
 }
 
 func (x *BatchQueryRequest) Reset() {
@@ -670,11 +663,10 @@ func (x *BatchQueryRequest) GetRequests() []*QueryRequest {
 
 // Response containing a list of QueryResponse messages
 type BatchQueryResponse struct {
-	state         protoimpl.MessageState
-	sizeCache     protoimpl.SizeCache
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Responses     []*QueryResponse       `protobuf:"bytes,1,rep,name=responses,proto3" json:"responses,omitempty"`
 	unknownFields protoimpl.UnknownFields
-
-	Responses []*QueryResponse `protobuf:"bytes,1,rep,name=responses,proto3" json:"responses,omitempty"`
+	sizeCache     protoimpl.SizeCache
 }
 
 func (x *BatchQueryResponse) Reset() {
